// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`operation structures standalone operations — no interface wrapper 1`] = `
"// AUTO-GENERATED by @typespex/http-emitter — do not edit

import type { MatchedRequestContext, OperationHandler } from "@typespex/http-server";
import type { HealthStatus } from "./models.js";

export interface StatusApiServer<Ctx = MatchedRequestContext> {
  readonly health: OperationHandler<Record<string, never>, HealthStatus, Ctx>;
}
"
`;

exports[`operation structures standalone operations — no interface wrapper 2`] = `
"// AUTO-GENERATED by @typespex/http-emitter — do not edit

import type { ServerOperation } from "@typespex/http-server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  Decoder,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodePathInput,
  decodeRequestInputAndBody,
  decodeBody,
  decodeJsonBody,
} from "@typespex/http-server";
import * as ServerHints from "./server-hints.js";
import type { HealthStatus } from "./models.js";

const StatusApiOutput = {
  health: ResponseEncoders.json<HealthStatus>(200),
};

export const StatusApiOperations = {
  health: {
    endpoint: {
      service: { name: "StatusApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "health",
        operationId: "StatusApi.health",
        method: "GET" as const,
        path: "/health",
        routePattern: { segments: [[{ kind: "literal", value: "health" }]], trailingSlash: false },
        hints: emptyHints(),
      },
    },
    decodeInput: () => Either.right({} as Record<string, never>),
    encodeResult: (result: HealthStatus) => StatusApiOutput.health.encode(result),
  } satisfies ServerOperation<Record<string, never>, HealthStatus>,
} as const;
"
`;

exports[`operation structures standalone operations — no interface wrapper 3`] = `
"// AUTO-GENERATED by @typespex/http-emitter — do not edit

import type {
  ComposableHttpRouter,
  HttpRouterOptions,
  MatchedRequestContext,
} from "@typespex/http-server";
import { bindRoute, createHttpRouter } from "@typespex/http-server";
import type { StatusApiServer } from "./server.js";
import { StatusApiOperations } from "./server-operations.js";

export function createStatusApiServerRouter<Ctx extends MatchedRequestContext>(
  implementation: StatusApiServer<Ctx>,
  options?: HttpRouterOptions<Ctx>,
): ComposableHttpRouter {
  return createHttpRouter([bindRoute(StatusApiOperations.health, implementation.health)], options);
}
"
`;

exports[`operation structures nested namespaces carry namespace metadata 1`] = `
"// AUTO-GENERATED by @typespex/http-emitter — do not edit

import type { ServerOperation } from "@typespex/http-server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  Decoder,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodePathInput,
  decodeRequestInputAndBody,
  decodeBody,
  decodeJsonBody,
} from "@typespex/http-server";
import * as ServerHints from "./server-hints.js";
import type { Config } from "./models.js";

const NestedApiOutput = {
  getConfig: ResponseEncoders.json<Config>(200),
};

export const NestedApiOperations = {
  getConfig: {
    endpoint: {
      service: { name: "NestedApi", hints: emptyHints() },
      namespaces: [{ name: "Admin", fullName: "NestedApi.Admin", hints: emptyHints() }],
      operation: {
        name: "getConfig",
        operationId: "NestedApi.getConfig",
        method: "GET" as const,
        path: "/admin/config",
        routePattern: {
          segments: [[{ kind: "literal", value: "admin" }], [{ kind: "literal", value: "config" }]],
          trailingSlash: false,
        },
        hints: emptyHints(),
      },
    },
    decodeInput: () => Either.right({} as Record<string, never>),
    encodeResult: (result: Config) => NestedApiOutput.getConfig.encode(result),
  } satisfies ServerOperation<Record<string, never>, Config>,
} as const;
"
`;

exports[`operation structures custom decorator hints for middleware 1`] = `
"// AUTO-GENERATED by @typespex/http-emitter — do not edit

import { createHintKey } from "@typespex/http-server";

export const authHint = createHintKey<string>("auth");
export const typeSpecDocHint = createHintKey<string>("TypeSpec.doc");
export const typeSpecSummaryHint = createHintKey<string>("TypeSpec.summary");
export const typeSpecTagsHint = createHintKey<readonly string[]>("TypeSpec.tags");
"
`;

exports[`operation structures custom decorator hints for middleware 2`] = `
"// AUTO-GENERATED by @typespex/http-emitter — do not edit

import type { ServerOperation } from "@typespex/http-server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  Decoder,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodePathInput,
  decodeRequestInputAndBody,
  decodeBody,
  decodeJsonBody,
} from "@typespex/http-server";
import * as ServerHints from "./server-hints.js";

const SecureApiOutput = {
  admin: ResponseEncoders.text(200),
};

export const SecureApiOperations = {
  admin: {
    endpoint: {
      service: { name: "SecureApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "admin",
        operationId: "SecureApi.admin",
        method: "GET" as const,
        path: "/admin",
        routePattern: { segments: [[{ kind: "literal", value: "admin" }]], trailingSlash: false },
        hints: createHints([[ServerHints.authHint, "admin"]]),
      },
    },
    decodeInput: () => Either.right({} as Record<string, never>),
    encodeResult: (result: string) => SecureApiOutput.admin.encode(result),
  } satisfies ServerOperation<Record<string, never>, string>,
} as const;
"
`;

exports[`operation structures escapes TypeScript identifiers and property names 1`] = `
"// AUTO-GENERATED by @typespex/http-emitter — do not edit

export interface EscapedModel {
  default: string;
  "x-request-id": string;
  readonly?: string;
  __proto__?: string;
}
"
`;

exports[`operation structures escapes TypeScript identifiers and property names 2`] = `
"// AUTO-GENERATED by @typespex/http-emitter — do not edit

import type { MatchedRequestContext, OperationHandler } from "@typespex/http-server";
import type { EscapedModel } from "./models.js";

export interface ItemsServer<Ctx = MatchedRequestContext> {
  readonly delete: OperationHandler<Record<string, never>, EscapedModel, Ctx>;
  readonly create: OperationHandler<
    {
      defaultValue?: string;
      default: string;
      "x-request-id": string;
      readonly?: string;
      __proto__?: string;
    },
    EscapedModel,
    Ctx
  >;
}

export interface EscapingApiServer<Ctx = MatchedRequestContext> {
  readonly Items: ItemsServer<Ctx>;
}
"
`;

exports[`operation structures escapes TypeScript identifiers and property names 3`] = `
"// AUTO-GENERATED by @typespex/http-emitter — do not edit

import type { ServerOperation } from "@typespex/http-server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  Decoder,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodePathInput,
  decodeRequestInputAndBody,
  decodeBody,
  decodeJsonBody,
} from "@typespex/http-server";
import * as ServerHints from "./server-hints.js";
import type { EscapedModel } from "./models.js";

const ItemsInput = {
  createRequest: RequestDecoders.query("default", Decoders.string.optional()).map(
    (defaultValue) => ({ defaultValue }),
  ),
  createBody: {
    json: (() => {
      const fallback0 = Decoders.string;
      const fallback1 = Decoders.string;
      const fallback2 = Decoders.optional(Decoders.string);
      const fallback3 = Decoders.optional(Decoders.string);
      return Decoder.of<EscapedModel>((input) => {
        if (typeof input !== "object" || input === null || Array.isArray(input)) {
          return Either.left([{ path: "", message: "Expected an object." }]);
        }
        const prototype = Object.getPrototypeOf(input);
        if (prototype !== Object.prototype && prototype !== null) {
          return Either.left([{ path: "", message: "Expected a plain object." }]);
        }
        const source = input as Record<string, unknown>;
        let issues: { path: string; message: string }[] | undefined;
        let value0 = Object.prototype.hasOwnProperty.call(source, "default")
          ? source["default"]
          : undefined;
        if (!(typeof value0 === "string")) {
          const decoded = fallback0.decode(value0);
          if (decoded._tag === "Left") {
            for (const issue of decoded.left) {
              (issues ??= []).push({ path: ".default" + issue.path, message: issue.message });
            }
          } else value0 = decoded.right;
        }
        let value1 = Object.prototype.hasOwnProperty.call(source, "x-request-id")
          ? source["x-request-id"]
          : undefined;
        if (!(typeof value1 === "string")) {
          const decoded = fallback1.decode(value1);
          if (decoded._tag === "Left") {
            for (const issue of decoded.left) {
              (issues ??= []).push({ path: ".x-request-id" + issue.path, message: issue.message });
            }
          } else value1 = decoded.right;
        }
        let value2 = Object.prototype.hasOwnProperty.call(source, "readonly")
          ? source["readonly"]
          : undefined;
        if (!(value2 === undefined || typeof value2 === "string")) {
          const decoded = fallback2.decode(value2);
          if (decoded._tag === "Left") {
            for (const issue of decoded.left) {
              (issues ??= []).push({ path: ".readonly" + issue.path, message: issue.message });
            }
          } else value2 = decoded.right;
        }
        let value3 = Object.prototype.hasOwnProperty.call(source, "__proto__")
          ? source["__proto__"]
          : undefined;
        if (!(value3 === undefined || typeof value3 === "string")) {
          const decoded = fallback3.decode(value3);
          if (decoded._tag === "Left") {
            for (const issue of decoded.left) {
              (issues ??= []).push({ path: ".__proto__" + issue.path, message: issue.message });
            }
          } else value3 = decoded.right;
        }
        return issues
          ? Either.left(issues)
          : Either.right(
              (value2 !== undefined && value3 !== undefined
                ? {
                    default: value0,
                    "x-request-id": value1,
                    readonly: value2,
                    ["__proto__"]: value3,
                  }
                : {
                    default: value0,
                    "x-request-id": value1,
                    ...(value2 === undefined ? {} : { readonly: value2 }),
                    ...(value3 === undefined ? {} : { ["__proto__"]: value3 }),
                  }) as EscapedModel,
            );
      });
    })(),
  },
};

const ItemsOutput = {
  delete: ResponseEncoders.json<EscapedModel>(200),
  create: ResponseEncoders.json<EscapedModel>(200),
};

export const ItemsOperations = {
  delete: {
    endpoint: {
      service: { name: "EscapingApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "delete",
        operationId: "Items.delete",
        method: "GET" as const,
        path: "/escaped",
        routePattern: { segments: [[{ kind: "literal", value: "escaped" }]], trailingSlash: false },
        hints: emptyHints(),
      },
    },
    decodeInput: () => Either.right({} as Record<string, never>),
    encodeResult: (result: EscapedModel) => ItemsOutput.delete.encode(result),
  } satisfies ServerOperation<Record<string, never>, EscapedModel>,

  create: {
    endpoint: {
      service: { name: "EscapingApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "create",
        operationId: "Items.create",
        method: "POST" as const,
        path: "/escaped",
        routePattern: { segments: [[{ kind: "literal", value: "escaped" }]], trailingSlash: false },
        hints: emptyHints(),
      },
    },
    decodeInput: (request, pathParams) =>
      decodeRequestInputAndBody<{ defaultValue?: string }, EscapedModel>(
        ItemsInput.createRequest,
        ItemsInput.createBody,
        request,
        pathParams,
        { contentTypes: ["application/json"] },
      ),
    encodeResult: (result: EscapedModel) => ItemsOutput.create.encode(result),
  } satisfies ServerOperation<
    {
      defaultValue?: string;
      default: string;
      "x-request-id": string;
      readonly?: string;
      __proto__?: string;
    },
    EscapedModel
  >,
} as const;
"
`;

exports[`operation structures escapes TypeScript identifiers and property names 4`] = `
"// AUTO-GENERATED by @typespex/http-emitter — do not edit

import type {
  ComposableHttpRouter,
  HttpRouterOptions,
  MatchedRequestContext,
} from "@typespex/http-server";
import { bindRoute, createHttpRouter } from "@typespex/http-server";
import type { EscapingApiServer } from "./server.js";
import { ItemsOperations } from "./server-operations.js";

export function createEscapingApiServerRouter<Ctx extends MatchedRequestContext>(
  implementation: EscapingApiServer<Ctx>,
  options?: HttpRouterOptions<Ctx>,
): ComposableHttpRouter {
  return createHttpRouter(
    [
      bindRoute(ItemsOperations.delete, implementation.Items.delete),
      bindRoute(ItemsOperations.create, implementation.Items.create),
    ],
    options,
  );
}
"
`;
